--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -5,7 +5,7 @@ jobs:
   build_on_win:
   runs-on: windows-latest
   steps:
-    - uses: actions/checkout@master
+    - uses: actions/checkout@v2
       - uses: actions/setup-node@master
         with:
           node-version: 12.18.3
