--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -5,11 +5,11 @@ jobs:
   build_on_win:
   runs-on: windows-latest
   steps:
-    - uses: actions/checkout@v2
-      - uses: actions/setup-node@master
-        with:
-          node-version: 12.18.3
-      - name: install dependencies
-        run: npm install
-      - name: build
-        run: npm run dist
+  - uses: actions/checkout@v2
+  - uses: actions/setup-node@v1
+    with:
+      node-version: 12.18.3
+  - name: install dependencies
+    run: npm install
+  - name: build
+    run: npm run dist
