Test with create .env file and "-p never"

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -11,6 +11,12 @@ jobs:
         node-version: 12.18.3
     - name: install dependencies
       run: npm install
+    - name: Make envfile
+      uses: SpicyPizza/create-envfile@v1
+      with:
+        envkey_STEAM_API_KEY: ${{ secrets.STEAM_API_KEY }}
+        directory: /environment
+        file_name: .env
     - name: build react
       run: npm run build:react
     - name: build electron
