--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "build:react": "set NODE_ENV=production && webpack --config webpack.react.config.js --mode production",
     "build": "npm run build:electron && npm run build:react",
     "pack": "electron-builder --dir",
-    "dist": "electron-builder --win portable",
+    "dist": "electron-builder --win portable -p never",
     "publish": "electron-builder --win -p always"
   },
   "keywords": [],
