Custom make envfile

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -6,17 +6,16 @@ jobs:
     runs-on: windows-latest
     steps:
     - uses: actions/checkout@v2
+    - name: Make envfile
+      env:
+        STEAM_API_KEY: ${{ secrets.STEAM_API_KEY }}
+      run: |
+        echo STEAM_API_KEY="$STEAM_API_KEY" > .\environment
     - uses: actions/setup-node@v1
       with:
         node-version: 12.18.3
     - name: install dependencies
       run: npm install
-    - name: Make envfile
-      uses: SpicyPizza/create-envfile@v1
-      with:
-        envkey_STEAM_API_KEY: ${{ secrets.STEAM_API_KEY }}
-        directory: /environment
-        file_name: .env
     - name: build react
       run: npm run build:react
     - name: build electron
